--- a/wp-content/themes/heideandcook/web/stylesheets/app.css
+++ b/wp-content/themes/heideandcook/web/stylesheets/app.css
@@ -2197,19 +2197,11 @@
  * foundation.zurb.com
  * Licensed under MIT Open Source
  */
-.header {
-  height: 6.8rem;
-  width: 100%; }
-  .header .header-row {
-    width: 100%; }
-  .header .logo {
-    height: 5rem;
-    top: .9rem;
-    position: absolute; }
-
 #main-menu {
   background: #fff;
   height: auto !important; }
+  #main-menu .large-logo > img {
+    height: 4.6875rem; }
   #main-menu #menu-main-menu {
     float: right; }
   #main-menu .horizontal.menu {
@@ -2221,6 +2213,10 @@
   #main-menu .top {
     background: #f3f4f4 !important;
     width: 100%; }
+    #main-menu .top a.login {
+      color: #006940; }
+    #main-menu .top a.login:hover {
+      text-decoration: underline; }
   #main-menu .menu-item.services {
     position: relative;
     padding-right: 1.25rem; }
@@ -2235,37 +2231,42 @@
     right: 15px; }
   #main-menu .menu-item.services::before {
     border-color: #4a4a4a transparent transparent; }
+  #main-menu .menu-item.services::before:hover {
+    border-color: #006940 transparent transparent; }
   #main-menu .menu-item.services::after {
     margin-top: -2px;
     border-color: #fff transparent transparent; }
 
-#menu-mobile-menu {
+#menu-mobile-menu, #mobile-menu {
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
   background: #f3f4f4; }
-  #menu-mobile-menu li > a {
+  #menu-mobile-menu li > a, #mobile-menu li > a {
     padding: .9rem; }
-  #menu-mobile-menu .is-drilldown {
-    max-width: none !important; }
-  #menu-mobile-menu .is-drilldown-submenu-parent > a::after {
+  #menu-mobile-menu .is-drilldown, #mobile-menu .is-drilldown {
+    max-width: none !important;
+    min-height: none !important; }
+  #menu-mobile-menu .is-drilldown-submenu-parent > a::after, #mobile-menu .is-drilldown-submenu-parent > a::after {
     border-color: transparent transparent transparent #4a4a4a;
     display: inline-block;
     vertical-align: middle;
     right: auto;
-    margin-left: 0.625rem; }
-  #menu-mobile-menu .is-drilldown-submenu-parent:hover > a::after {
+    margin-left: 0.625rem;
+    margin-top: -5px; }
+  #menu-mobile-menu .is-drilldown-submenu-parent:hover > a::after, #mobile-menu .is-drilldown-submenu-parent:hover > a::after {
     border-color: transparent transparent transparent #006940;
     display: inline-block;
     vertical-align: middle;
     right: auto;
     margin-left: 0.625rem; }
-  #menu-mobile-menu .submenu.is-drilldown-submenu {
+  #menu-mobile-menu .submenu.is-drilldown-submenu, #mobile-menu .submenu.is-drilldown-submenu {
     background: #f3f4f4; }
-  #menu-mobile-menu .js-drilldown-back > a::before {
+  #menu-mobile-menu .js-drilldown-back > a::before, #mobile-menu .js-drilldown-back > a::before {
+    margin-top: -0.1875rem;
     border-color: transparent #4a4a4a transparent transparent;
     margin-right: 0.625rem; }
-  #menu-mobile-menu .js-drilldown-back:hover > a::before {
+  #menu-mobile-menu .js-drilldown-back:hover > a::before, #mobile-menu .js-drilldown-back:hover > a::before {
     border-color: transparent #006940 transparent transparent; }
 
 #mega-menu #mega-menu > .row {
@@ -2363,11 +2364,7 @@
   background: #f3f4f4;
   padding: 0px 2rem;
   min-height: 25rem;
-  max-height: 32rem;
-  background-image: url("../images/happy-guy.png");
-  background-repeat: no-repeat;
-  background-position: right 7% bottom;
-  background-size: 20%; }
+  max-height: 32rem; }
   .why-choose-us .green-header {
     margin-top: 4.6875rem; }
   .why-choose-us .quote-container {
@@ -2396,7 +2393,8 @@
     .why-choose-us .accordion .accordion-content {
       background: none;
       color: #4a4a4a;
-      padding: .25rem; }
+      padding: .25rem;
+      padding-left: 1rem; }
 
 .why-choose-us::before {
   left: 50%;
@@ -2432,7 +2430,8 @@
     height: 14rem;
     text-align: center; }
     .recent-work .recent-work-slider .hc-work {
-      position: relative; }
+      position: relative;
+      height: 150px; }
       .recent-work .recent-work-slider .hc-work h3 {
         position: absolute;
         color: #fff;
@@ -2633,7 +2632,19 @@
   .slick-next {
     right: 3.125rem !important;
     height: auto !important;
-    top: -1.5rem !important; } }
+    top: -1.5rem !important; }
+  .locations .tabs {
+    display: table;
+    text-align: center;
+    width: 100% !important; }
+  .locations .tabs-title {
+    width: 33.33%;
+    float: left !important;
+    font-size: .8rem !important; }
+  .locations .tabs-title > a {
+    font-size: .8rem; }
+  .locations .tabs-content {
+    text-align: center; } }
 
 .generic-content {
   margin: 2.5rem 0px; }
